# nano

./: .gitignore  README.md  SKILL.md  deploy.py  main.py  pyproject.toml  requirements.txt  setup.py  vercel.json
.github/workflows/: deploy.yml
nano/: app.py
nano/auth/: __init__.py  app.py  cfg.py  data.py  ui.py
nano/blog/: __init__.py  app.py  cfg.py  data.py  ui.py
nano/blog/posts/: 00-vedicreader-main-feature.md  01-connect-order.md  01-litesearch.md  02-blog-block.md  02-kosha.md  03-connect.md  03-dockeasy.md  04-vedicreader-to-eight-packages.md  04-vpseasy.md  05-cfeasy.md  05-lego-is-a-folder.md  06-gheasy.md  07-full-stack.md  08-ishwara.md
nano/core/: __init__.py  cfg.py  icons.py  theme.css  theme.js  ui.py  utils.py
