[project]
name = "nano"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "fastcore>=1.13.9",
    "fastsql>=2.1.2",
    "monsterui>=1.0.46",
    "pyjwt>=2.13.0",
    "python-fasthtml>=0.14.4",
    "rcssmin>=1.2.2",
    "resend>=2.32.2",
    "rjsmin>=1.2.5",
    "sqlalchemy-libsql>=0.2.0",
    "ujson>=5.13.0",
]

[dependency-groups]
dev = [
    "fossick>=0.0.11",
    "koshas>=0.0.20",
]

[project.urls]
Homepage = "https://github.com/vedicreader/nano"
Issues = "https://github.com/vedicreader/nano/issues"

[tool.hatch.build.targets.wheel]
packages = ["nano"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
